# FFmpeg

./: .gitignore  build_android.sh  configure
demo/: .gitignore
demo/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
demo/app/src/androidTest/java/com/sherlock/ffmpegdemo/: ExampleInstrumentedTest.java
demo/app/src/main/: AndroidManifest.xml
demo/app/src/main/cpp/include/libavutil/: ffversion.h
demo/app/src/main/cpp/source/: VideoPlayer.cpp  VideoPlayer.h
demo/app/src/main/java/com/sherlock/ffmpegdemo/: MainActivity.java
demo/app/src/main/res/layout/: activity_main.xml
demo/app/src/test/java/com/sherlock/ffmpegdemo/: ExampleUnitTest.java
